tests/semantic/valid/11_while_loop.tc
int main(void) {
    int i = 0;
    int sum = 0;
    while (i < 10) {
        i = i + 1;
        if (i == 5)
            continue;
        sum = sum + i;
        if (sum > 20)
            break;
    }
    return sum;
}
